--- a/res/values-cy/strings.xml
+++ b/res/values-cy/strings.xml
@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <string name="app_name">Signal</string>
+  <!-- Removed by excludeNonTranslatables <string name="app_name">Signal</string> -->
   <string name="yes">Iawn</string>
   <string name="no">Na</string>
   <string name="delete">Dileu</string>
