--- a/res/values-et/strings.xml
+++ b/res/values-et/strings.xml
@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <string name="app_name">Signal</string>
+  <!-- Removed by excludeNonTranslatables <string name="app_name">Signal</string> -->
   <string name="yes">Jah</string>
   <string name="no">Ei</string>
   <string name="delete">Kustuta</string>
