--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <string name="app_name">Signal</string>
+  <!-- Removed by excludeNonTranslatables <string name="app_name">Signal</string> -->
   <string name="yes">हाँ </string>
   <string name="no">नहीं</string>
   <string name="delete">मिटाओ</string>
