--- a/res/values-lv/strings.xml
+++ b/res/values-lv/strings.xml
@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <string name="app_name">Signal</string>
+  <!-- Removed by excludeNonTranslatables <string name="app_name">Signal</string> -->
   <string name="yes">Jā</string>
   <string name="no">Nē</string>
   <string name="delete">Dzēst</string>
