--- a/res/values-ms/strings.xml
+++ b/res/values-ms/strings.xml
@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <string name="app_name">Signal</string>
+  <!-- Removed by excludeNonTranslatables <string name="app_name">Signal</string> -->
   <string name="yes">Ya</string>
   <string name="no">Tidak</string>
   <string name="delete">Padam</string>
