--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <string name="app_name">Signal</string>
+  <!-- Removed by excludeNonTranslatables <string name="app_name">Signal</string> -->
   <string name="yes">Да</string>
   <string name="no">Не</string>
   <string name="delete">Обриши</string>
