--- a/res/values-th/strings.xml
+++ b/res/values-th/strings.xml
@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <string name="app_name">Signal</string>
+  <!-- Removed by excludeNonTranslatables <string name="app_name">Signal</string> -->
   <string name="yes">ใช่</string>
   <string name="no">ไม่</string>
   <string name="delete">ลบ</string>
