--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <string name="app_name">Signal</string>
+  <!-- Removed by excludeNonTranslatables <string name="app_name">Signal</string> -->
   <string name="yes">جی ہاں</string>
   <string name="no">جی نہیں</string>
   <string name="delete">حذف کریں</string>
