--- a/res/values-ku/strings.xml
+++ b/res/values-ku/strings.xml
@@ -10,7 +10,7 @@
   <!--AbstractNotificationBuilder-->
   <string name="AbstractNotificationBuilder_new_message">Peyama nû</string>
   <!--AlbumThumbnailView-->
-  <string name="AlbumThumbnailView_plus">%d+\</string>
+  <!-- Removed by excludeNonTranslatables <string name="AlbumThumbnailView_plus">%d+\</string> -->
   <!--ApplicationMigrationActivity-->
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">Vê gavê: %s</string>
