--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -10,7 +10,7 @@
   <!--AbstractNotificationBuilder-->
   <string name="AbstractNotificationBuilder_new_message">رسالة جديدة</string>
   <!--AlbumThumbnailView-->
-  <string name="AlbumThumbnailView_plus">/+%d</string>
+  <!-- Removed by excludeNonTranslatables <string name="AlbumThumbnailView_plus">/+%d</string> -->
   <!--ApplicationMigrationActivity-->
   <string name="ApplicationMigrationActivity__signal_is_updating">يُحدّث سغنال…</string>
   <!--ApplicationPreferencesActivity-->
