--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -10,7 +10,7 @@
   <!--AbstractNotificationBuilder-->
   <string name="AbstractNotificationBuilder_new_message">Nová zpráva</string>
   <!--AlbumThumbnailView-->
-  <string name="AlbumThumbnailView_plus">\+ %d</string>
+  <!-- Removed by excludeNonTranslatables <string name="AlbumThumbnailView_plus">\+ %d</string> -->
   <!--ApplicationMigrationActivity-->
   <string name="ApplicationMigrationActivity__signal_is_updating">Signal se aktualizuje…</string>
   <!--ApplicationPreferencesActivity-->
